compiler/tests/fixtures/invalid/semantics/role_chance_out_of_range.viv
// Invalid: role with chance value out of range

action bad-chance-range:
    roles:
        @actor:
            as: initiator
        @maybe*:
            as: partner
            n: 0-3 [150%]
